<resources>
    <!-- Nome do App-->
    <string name="app_name">Ensine-me</string>

    <!-- Activities Títulos-->
    <string name="title_activity_login">Entrar</string>
    <string name="title_activity_cadastro">Novo cadastro</string>
    <string name="title_activity_professor_main">Professor</string>
    <string name="title_activity_aluno_main">Aluno</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_demanda">Nova demanda</string>
    <string name="title_activity_oferta">Oferta</string>
    <string name="title_activity_fullscreen">ensine-me</string>
    <string name="title_activity_principal">Seja bem vindo</string>
    <string name="title_activity_categoria">Gerenciar categorias</string>
    <string name="title_activity_usuario">Gerenciar usuários</string>
    <string name="title_activity_administrador_main">Admin</string>

    <!-- Campos de entrada de dados-->
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="celular">Celular</string>
    <string name="senha">Senha</string>
    <string name="data">DD/MM/AAAA</string>
    <string name="descricaodemanda">Decrição da demanda</string>
    <string name="interesseAprender">aprender</string>
    <string name="interesseEnsinar">ensinar</string>
    <string name="cep">CEP</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="logradouro">Logradouro</string>
    <string name="complemento">Complemento</string>
    <string name="numero">n.º</string>
    <string name="bairro">Bairro</string>
    <string name="valor">R$ 0,00</string>

    <!-- Mensagens de erros-->
    <string name="emailInvalido">Email inválido</string>
    <string name="senhaInvalida">Password must be >5 characters</string>
    <string name="falhaLogin">Falha no login</string>
    <string name="msg_erro_nome">Nome não preeenchido</string>
    <string name="msg_erro_email_empty">Email não preenchido</string>
    <string name="msg_erro_celular">Celular não preeenchido</string>
    <string name="msg_erro_senha_empty">Senha não preenchida</string>
    <string name="msg_erro_campo_empty">Campo obrigatório</string>

    <!-- Títulos Orientação-->
    <string name="interesse">Qual seu interesse?</string>
    <string name="esqueceuSenha">Esqueceu a senha?</string>
    <string name="recuperaSenha">clique aqui.</string>
    <string name="validadeDemanda">Quanto tempo você aguardará propostas?</string>
    <string name="expiraDemanda">Data de Expiração da Demanda</string>
    <string name="desejaaprender">O que deseja aprender?</string>
    <string name="localaulas">Onde serão as aulas?</string>
    <string name="exploracaegorias">Explore as categorias</string>

    <!-- Títulos campos -->
    <string name="categoria">Categoria</string>
    <string name="cargahoraria">Carga Horária</string>
    <string name="inicioDemanda">Início das aulas</string>
    <string name="turnoDemanda">Turno escolhido</string>


    <!-- Menu Principal-->
    <string name="title_inicio">Início</string>
    <string name="title_busca">Busca</string>
    <string name="title_configura">Configura</string>

    <!-- Ações-->
    <string name="acaoEntrar">Entrar</string>
    <string name="acaoCancelar">Cancelar</string>
    <string name="acaoEntrarCurta">Entrar</string>
    <string name="acaoConfigurar">Configurar</string>
    <string name="acaoSair">Sair</string>
    <string name="acaoCadastrar">Cadastrar</string>
    <string name="acaoRecuperarSenha">Receber email</string>
    <string name="acaoVerCategorias">Categorias</string>
    <string name="acaoVerUsuarios">Usuarios</string>
    <string name="acaoVerTelaProfessor">Professor</string>
    <string name="acaoVerTelaAluno">Aluno</string>
    <string name="acaoAlterar">Alterar</string>
    <string name="acaoExcluir">Excluir</string>
    <string name="acaoEscolher">Escolher</string>
    <string name="acaoEncerrar">Encerrar</string>
    <string name="acaoInserirProposta">Inserir proposta</string>
    <string name="Buscar">Buscar</string>

    <!-- Preference Titles -->
    <string name="messages_header">Credenciais</string>
    <string name="sync_header">Notificações</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Assinatura</string>
    <string name="email_title">Email</string>
    <string name="pref_data">preferencias</string>
    <string name="pref_Nome">nome</string>
    <string name="pref_Email">email</string>
    <string name="pref_notification">notification</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sincronizar email periodicamente</string>
    <string name="attachment_title">Baixar anexos recebidos</string>
    <string name="attachment_summary_on">Baixar automaticamente anexos para receber e-mails
    </string>
    <string name="attachment_summary_off">Faça o download de anexos somente quando solicitado manualmente.</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_do_aluno">Nome do aluno</string>
    <string name="title_activity_OfertaValida">Validar proposta</string>
    <string name="historic">Histórico</string>
    <string name="credencials">Credenciais</string>
    <string name="notification">Notificações</string>
    <string name="speak_voice">Pesquisa por voz</string>
    <string formatted="true" name = "bemvindo">Bem vindo ao ensine-me.

                    Vamos começar?

                    O que você deseja aprender?</string>
    <string formatted="true" name = "bemvindoprofessor">Bem vindo ao ensine-me.

                   Não há demandas disponíveis no momento.</string>



</resources>
