<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <Preference
            app:key="@string/nome"
            app:title="@string/nome"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="@string/email"
            app:title="@string/email"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreference
            app:key="@string/notification"
            app:title="Habilitar mensagem de notificação"/>

        <SwitchPreference
            app:key="@string/credencials"
            app:title="Salvar credenciais"
            app:summary="Salva o login e a senha do usuário no dispositivo"
            />

        <Preference
            app:key="@string/historic"
            app:title="Histórico"
            app:summary="Limpar o histórico de busca"
            />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
