<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecuperaSenhaActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/layoutTelasInserir">

            <LinearLayout
                android:id="@+id/LinDemanda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/background_listas">


                <TextView
                    android:id="@+id/txtRotulo"
                    style="@style/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dados da Demanda"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtRotulo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Descrição da Demanda"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descricaodemanda" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Categoria:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtCatDemanda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="3"
                            android:text="@string/categoria" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Turno:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtTurno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/turnoDemanda" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Iniciar aulas:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtInicio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="2"
                            android:text="@string/inicioDemanda" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="CH:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtCH"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/cargahoraria" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtRotulo6"
                    style="@style/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Endereço da Demanda"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Cidade:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtCidade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="10"
                            android:text="@string/cidade" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Estado:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtEstado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/estado" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtRotulo9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Logradouro:"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtLogradouro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="18"
                        android:text="@string/logradouro" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo10"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="6dp"
                            android:text="Complemento:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtComplemento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="@string/complemento" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo11"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:text="Nº"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtnumero"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="10"
                            android:text="@string/numero" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="CEP:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtCEP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cep" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRotulo13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="Bairro:"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtBairro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bairro" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtRotulo14"
                    style="@style/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data de Expiração da Demanda"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textExpiracao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expiraDemanda"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView28"
                    style="@style/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fazer Oferta"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCadastrarOferta"
                style="@style/botao"
                android:text="@string/acaoCadastrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtValor" />


            <EditText
                android:id="@+id/txtValor"
                style="@style/inserirtexto"

                android:hint="@string/valor"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinDemanda" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/txtValor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>